code commit@Rahul
add grid system in wharehouse module

--- a/src/main/resources/templates/layouts/Master/StoreMaster.html
+++ b/src/main/resources/templates/layouts/Master/StoreMaster.html
@@ -106,8 +106,8 @@
 															id="" title="status" th:field="*{storeStatus}" required>
 
 
-															<option value="functional" selected>Functional</option>
-															<option value="non-functional">Non-Functioanl</option>
+															<option value="F" selected>Functional</option>
+															<option value="N">Non-Functioanl</option>
 														</select>
 													</div>
 
@@ -116,8 +116,8 @@
 															style="color: red">*</label> <select class="form-control"
 															id="" title="type" th:field="*{storeType}" required>
 
-															<option value="store">Store</option>
-															<option value="godown">Godown</option>
+															<option value="S">Store</option>
+															<option value="G">Godown</option>
 														</select>
 													</div>
 
