--- a/src/main/resources/templates/layouts/Master/UOM.html
+++ b/src/main/resources/templates/layouts/Master/UOM.html
@@ -119,8 +119,8 @@
 															class="form-control" title="measurement system"
 															th:field="*{measurementSystem}">
 															<option value="">Select</option>
-															<option value="british">British</option>
-															<option value="french">French</option>
+															<option value="B">British</option>
+															<option value="F">French</option>
 
 														</select>
 													</div>
