--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -117,8 +117,8 @@
 															id="" th:field="*{accountHead}"
 															placeholder="Account Head" title="account head" required>
 															<option value="">Select</option>
-															<option value="t-1">type-1</option>
-															<option value="t-2">type-2</option>
+															<option value="1">type-1</option>
+															<option value="2">type-2</option>
 														</select>
 													</div>
 
