--- a/src/main/resources/templates/layouts/Master/serviceCategory.html
+++ b/src/main/resources/templates/layouts/Master/serviceCategory.html
@@ -113,8 +113,8 @@
 															style="color: red">*</label> <select class="form-control"
 															id="" title="This field is required" required>
 
-															<option value="sales">Sales</option>
-															<option value="journal">Journal</option>
+															<option value="S">Sales</option>
+															<option value="J">Journal</option>
 
 														</select>
 													</div>
