--- a/src/main/resources/templates/layouts/editview/editCategory.html
+++ b/src/main/resources/templates/layouts/editview/editCategory.html
@@ -80,8 +80,8 @@
 															style="color: red">*</label> <select class="form-control"
 															id="" title="type" th:field="*{accountHead}" required>
 															<option value="">Select</option>
-															<option value="t-1">type-1</option>
-															<option value="t-2">type-2</option>
+															<option value="1">type-1</option>
+															<option value="2">type-2</option>
 														</select>
 													</div>
 
