--- a/src/main/resources/templates/layouts/editview/editStore.html
+++ b/src/main/resources/templates/layouts/editview/editStore.html
@@ -75,8 +75,8 @@
 															th:field="*{storeStatus}" required>
 															<option value="">Select</option>
 
-															<option value="Normal">Normal</option>
-															<option value="Ondate">As On Date</option>
+																<option value="F" selected>Functional</option>
+															<option value="Nl">Non-Functioanl</option>
 														</select>
 													</div>
 
@@ -86,8 +86,8 @@
 														<select class="form-control" id="" title="type"
 															th:field="*{storeType}" required>
 															<option value="">Select</option>
-															<option value="t-1">type-1</option>
-															<option value="t-2">type-2</option>
+																<option value="S">Store</option>
+															<option value="G">Godown</option>
 														</select>
 													</div>
 
