--- a/src/main/resources/templates/layouts/Master/materialRequisition.html
+++ b/src/main/resources/templates/layouts/Master/materialRequisition.html
@@ -125,9 +125,8 @@
 
 														<div class="form-group col-md-4">
 															<label for="inputPassword4">Employee Name</label> <select
-																class="form-control" id="employee"
-																title="employee name" th:field="*{employee}" 
-																onchange="selectEmployee()">
+																class="form-control" id="employee" title="employee name"
+																th:field="*{employee}" onchange="selectEmployee()">
 																<option value="">Select</option>
 																<option th:each="employee :  ${employeeList}"
 																	th:text="${employee.empName}"
@@ -138,36 +137,39 @@
 														<div class="form-group col-md-4">
 															<label for="inputAddress">Department Code</label> <input
 																type="text" class="form-control" id="departmentCode"
-																title="department code" placeholder ="Department Code" readonly>
+																title="department code" placeholder="Department Code"
+																readonly>
 														</div>
 
 
 														<div class="form-group col-md-4">
 															<label for="inputPassword4">Department Name</label> <input
 																type="text" class="form-control" id="departmentName"
-																title="department name" placeholder="Department Name" readonly>
+																title="department name" placeholder="Department Name"
+																readonly>
 														</div>
 
 														<div class="form-group col-md-4">
 															<label for="inputPassword4">Requisition Type</label> <select
-																class="form-control" id="" title="requisition type" th:field="*{requisitionType}">
-													
+																class="form-control" id="" title="requisition type"
+																th:field="*{requisitionType}">
+
 																<option value="gn">General</option>
 																<option value="Normal">Normal</option>
 																<option value="Ondate">As On Date</option>
 															</select>
 														</div>
-														
+
 														<div class="form-group col-md-4">
 															<label for="inputPassword4">Purchase Type</label> <select
 																class="form-control" id="" title="requisition type">
-													
+
 																<option value="nc">Non-Capex</option>
 																<option value="c">Capex</option>
 																<option value="Ondate">As On Date</option>
 															</select>
 														</div>
-														
+
 														<div class="form-group col-md-4">
 															<label for="inputAddress">Work Center Code</label> <input
 																type="text" class="form-control" id="gateEntryDate"
@@ -185,7 +187,7 @@
 																	th:value=" ${department.deptCode}"></option> -->
 															</select>
 														</div>
-														
+
 														<div class="form-group col-md-4">
 															<label for="inputAddress">Store Code</label> <input
 																type="text" class="form-control" id="gateEntryDate"
@@ -219,9 +221,20 @@
 
 														<input id="_cr" name="_cr" type="hidden" value="1">
 
+														<div class="col-sm-12" style="text-align: right">
 
 
-														<div class="table-responsive">
+
+
+															<a id="add_row" class="fa fa-plus" aria-hidden="true"
+																style="font-size: 24px; color: #001080"></a>&nbsp;&nbsp;&nbsp;
+															<a id='delete_row' class="fa fa-trash"
+																style="font-size: 24px; color: #399490fc"
+																aria-hidden="true"></a>
+														</div>
+
+
+														<div class="table-responsive" style="margin-top: 40px">
 															<table id="example" aria-describedby="example"
 																class="table table-striped display">
 																<thead>
@@ -237,22 +250,25 @@
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">UOM</th>
 																		<th scope="col" class="text-center"
-																			style="width: 10px;">Qty <br>in Stock</th>
-																		<th scope="col" class="text-center"
-																			style="width: 50px;">Qty <br>Required</th>
-																		<th scope="col" class="text-center"
-																			style="width: 50px;">Approved <br>Required Qty</th>
-																		<th scope="col" class="text-center"
-																			style="width: 90px;">Required Date
+																			style="width: 10px;">Qty <br>in Stock
 																		</th>
-																		
+																		<th scope="col" class="text-center"
+																			style="width: 50px;">Qty <br>Required
+																		</th>
+																		<th scope="col" class="text-center"
+																			style="width: 50px;">Approved <br>Required
+																			Qty
+																		</th>
+																		<th scope="col" class="text-center"
+																			style="width: 90px;">Required Date</th>
+
 
 
 																	</tr>
 																</thead>
 
 																<tbody>
-																	<tr id="addr0">
+																	<tr id="adr0">
 
 
 																		<td><input type="number" title="sno."
@@ -264,8 +280,9 @@
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
-																			name="materialRequisitionDetails[0].item" title="item"
-																			onchange='getOrderIndentDetailPo()' required>
+																			name="materialRequisitionDetails[0].item"
+																			title="item" onchange='getOrderIndentDetailPo()'
+																			required>
 																				<option value="">Select Indent</option>
 																				<option th:each="po :  ${listPO}"
 																					th:text="${po.poNumber}" th:value=" ${po.poNumber}"></option>
@@ -283,7 +300,8 @@
 
 																		<td><input type="number" title="qty"
 																			class="form-control form-control-sm"
-																			style="width: 70px;" name="materialRequisitionDetails[0].qty"></td>
+																			style="width: 70px;"
+																			name="materialRequisitionDetails[0].qty"></td>
 
 																		<td><input type="number"
 																			class="form-control form-control-sm" title="net qty"
@@ -293,15 +311,15 @@
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="srNoClaimUnder"
 																			name="materialRequisitionDetails[0].srNoClaimUnder"></td>
-																			
+
 																		<td><input type="date"
 																			class="form-control form-control-sm"
-																			id="orderItemuom" title="" style="width:150px"
+																			id="orderItemuom" title="" style="width: 150px"
 																			name="materialRequisitionDetails[0].srNoSendForRep"></td>
 
 
-																	</tr> 
-																	<tr id='addr1' />
+																	</tr>
+																	<tr id='adr1' />
 
 																</tbody>
 
@@ -352,31 +370,30 @@
 
 
 	<script>
-	
-	
-	function selectEmployee(){
-		
-		var employee = document.getElementById("employee").value;
-		console.log("employee is "+ employee);
-		
-		document.getElementById("empCode").value = employee;
-		
-		$.ajax({
-			type: "GET",
-			url: "employeeinfo/" + employee,
+		function selectEmployee() {
 
-			success: function(data) {
-				
-				console.log("response data : " + data);
-				
-				$("#departmentCode").val(data.deptCode);
-				$("#departmentName").val(data.deptName)
-				//$("#departmentname").val(data.department.deptName)
-			}, error: function() {
-				console.log("Error");
-			}
-		});
-	}
+			var employee = document.getElementById("employee").value;
+			console.log("employee is " + employee);
+
+			document.getElementById("empCode").value = employee;
+
+			$.ajax({
+				type : "GET",
+				url : "employeeinfo/" + employee,
+
+				success : function(data) {
+
+					console.log("response data : " + data);
+
+					$("#departmentCode").val(data.deptCode);
+					$("#departmentName").val(data.deptName)
+					//$("#departmentname").val(data.department.deptName)
+				},
+				error : function() {
+					console.log("Error");
+				}
+			});
+		}
 		$(document).ready(function() {
 
 			document.getElementById('gateEntryDate').valueAsDate = new Date();
@@ -438,6 +455,67 @@
 			}
 
 		});
+	</script>
+
+	<script>
+		$(document)
+				.ready(
+						function() {
+							console.log("ready!");
+
+							var j = 1;
+
+							$('#add_row')
+									.click(
+											function() {
+
+												console
+														.log("add clickk function")
+												//idIndex2++;
+												$('#adr' + j)
+														.html(
+																"<td><input type='number' title='sno.' class='form-control form-control-sm' style='width: 70px;' name='materialRequisitionDetails[0].srNo'></td>"
+																
+																		+"<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' name='materialRequisitionDetails[0].item' title='item' onchange='getOrderIndentDetailPo()' required><option value=''>Select Indent</option><option th:each='po :  ${listPO}' th:text='${po.poNumber}' th:value=' ${po.poNumber}'></option></select></td>"
+
+																		+ "<td><input type='text' class='form-control form-control-sm' style='width: 170px;' id='orderItemDescription' <td>"
+																		
+																	
+
+																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+
+																		+ "<td><input type='number' title='qty' class='form-control form-control-sm' style='width: 70px;' name='materialRequisitionDetails[0].qty'></td>"  // Description
+
+																		+ "<td><input type='number' class='form-control form-control-sm' title='net qty'name='materialRequisitionDetails[0].netQty'></td>" // Item Received
+
+																		+ "<td><input type='text' class='form-control form-control-sm' id='technicalQualification' title='srNoClaimUnder' name='materialRequisitionDetails[0].srNoClaimUnder'></td>" // UOM
+
+																		+ "<td><input type='date' class='form-control form-control-sm' id='orderItemuom' title='' style='width: 150px' name='materialRequisitionDetails[0].srNoSendForRep'></td>" //  Mrn Qty
+
+																		
+
+																	
+
+														);
+												$('#example').append(
+														'<tr id="adr' + (j + 1)
+																+ '"></tr>');
+
+												//listOfSupplierInfo()
+
+												j++;
+
+											});
+
+							$("#delete_row").click(function() {
+								if (j > 1) {
+									$("#adr" + (j - 1)).html('');
+
+									j--;
+
+								}
+							});
+						});
 	</script>
 	<!--   <section class="content">
         
