--- a/src/main/resources/templates/layouts/editview/editUom.html
+++ b/src/main/resources/templates/layouts/editview/editUom.html
@@ -2,15 +2,22 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 </head>
 
@@ -23,8 +30,7 @@
 				<div class="row">
 					<!-- left column -->
 					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+						<div class="col-md-3"></div>
 
 
 						<div class="col-md-6" style="margin-top: 20px;">
@@ -34,31 +40,31 @@
 									<h3 class="box-title">UOM</h3>
 								</div>
 								<!-- form start -->
-								<form role="form" th:action="@{/uom/}" method="POST" th:object="${uom}">
+								<form role="form" th:action="@{/uom/}" method="POST"
+									th:object="${uom}">
 									<div class="box-body">
 
 										<div class="form-group col-md-12">
-											<label>UOM Code</label><label
-												style="color: red">*</label>
-											<input type="text" class="form-control" placeholder="Uom Code"
-												th:field="*{uomCode}" title="uom code" required/>
+											<label>UOM Code</label><label style="color: red">*</label> <input
+												type="text" class="form-control" placeholder="Uom Code"
+												th:field="*{uomCode}" title="uom code" required />
 
 										</div>
 										<div class="form-group col-md-12">
-											<label>Unit</label><label
-												style="color: red">*</label>
-											<input type="text" class="form-control" placeholder="Unit"
+											<label>Unit</label><label style="color: red">*</label> <input
+												type="text" class="form-control" placeholder="Unit"
 												th:field="*{unit}" title="unit" required />
 
 										</div>
 
 										<div class="form-group col-lg-12">
-											<label class="form-label">Measurement System</label>
-											 <select class="form-control"
-												title="measurement system" th:field="*{measurementSystem}">
+											<label class="form-label">Measurement System</label> <select
+												class="form-control" title="measurement system"
+												th:field="*{measurementSystem}">
 												<option value="">Select</option>
-												<option value="british">British</option>
-												<option value="french">French</option>
+												<option value="B">British</option>
+												<option value="F">French</option>
+
 												<!-- <option th:each="country :  ${countryList}"
 									th:text="${country.countryName}"
 									th:value=" ${country.countryCode}"></option> -->
@@ -69,20 +75,21 @@
 									</div>
 
 									<div class="box-footer">
-										<input type="submit" value="Apply Changes" class="btn btn-primary" /> 
-										<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
+										<input type="submit" value="Apply Changes"
+											class="btn btn-primary" /> <input type="button"
+											value="Go back!" class="btn btn-danger"
+											onclick="history.back()">
 									</div>
-									
+
 
 								</form>
-								
-									
+
+
 							</div>
 						</div>
 
 
-						<div class="col-md-3">
-						</div>
+						<div class="col-md-3"></div>
 					</div>
 
 				</div>
@@ -92,9 +99,12 @@
 			<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/jQuery-2.1.4.min.js"
+				th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js"
+				th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js"
+				th:src="@{/js/fastclick.min.js}"></script>
 			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
 			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
