--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -101,7 +101,7 @@
 														<label for="inputEmail4">Category Code</label> <input
 															type="text" class="form-control"
 															placeholder="Category Code" th:field="*{categCode}"
-															title="category code" readonly>
+															title="category code">
 													</div>
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Description</label><span
