code commit@Rahul
code optimize till partymaster

--- a/src/main/resources/templates/layouts/Master/partyMaster.html
+++ b/src/main/resources/templates/layouts/Master/partyMaster.html
@@ -132,9 +132,9 @@
 																	class="form-control" title="type"  th:field="*{custType}"
 																	required>
 																	<option value="">Select</option>
-																	<option value="supplier">Supplier</option>
-																	<option value="customer">Customer</option>
-																	<option value="both">Both</option>
+																	<option value="S">Supplier</option>
+																	<option value="C">Customer</option>
+																	<option value="B">Both</option>
 																	
 																</select>
 															</div>
