--- a/src/main/resources/templates/layouts/editview/editRequestForQuotation.html
+++ b/src/main/resources/templates/layouts/editview/editRequestForQuotation.html
@@ -2,31 +2,37 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
-	<script type="text/javascript" th:src="@{/JS/myjs.js}"></script>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
+<script type="text/javascript" th:src="@{/JS/myjs.js}"></script>
 
 
-	<style>
-		.form-control-sm {
-			height: 30px;
-			width: 120px;
-			font-size: 11px;
+<style>
+.form-control-sm {
+	height: 30px;
+	width: 120px;
+	font-size: 11px;
+}
 
-		}
-
-		.select {
-			width: 130px;
-			font-size: 11px;
-		}
-	</style>
+.select {
+	width: 130px;
+	font-size: 11px;
+}
+</style>
 
 
 </head>
@@ -69,15 +75,17 @@
 
 
 
-									<div class="col-md-12 shadow bg-white rounded" style="margin-top: 20px;">
+									<div class="col-md-12 shadow bg-white rounded"
+										style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
-											</div><!-- /.box-header -->
+											</div>
+											<!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/requestquotation/}" method="POST"
-												th:object="${rFQuotation}">
+											<form role="form" th:action="@{/requestquotation/}"
+												method="POST" th:object="${rFQuotation}">
 												<div class="box-body">
 
 													<div class="form-group col-md-4">
@@ -86,24 +94,25 @@
 															placeholder="quotation number" th:field="*{rfqNo}">
 													</div>
 													<div class="form-group col-md-4">
-														<label class="form-label">Request For Quotation Type</label>
-														<label style="color: red">*</label>
-														<select class="form-control" id="" title="urgency"
+														<label class="form-label">Request For Quotation
+															Type</label> <label style="color: red">*</label> <select
+															class="form-control" id="" title="urgency"
 															th:field="*{rfqType}" required>
 															<option value="">Select</option>
-															<option value="indent">Indent</option>
-															<option value="withoutIndent">without Indent</option>
+															<option value="I">Indent</option>
+															<option value="W">without Indent</option>
 
 														</select>
 													</div>
 
 													<div class="form-group col-md-4">
-														<label for="inputEmail4">Request for Quotation Date</label>
-														<input type="date" class="form-control"
+														<label for="inputEmail4">Request for Quotation
+															Date</label> <input type="date" class="form-control"
 															placeholder="quotation date" th:field="*{rfqDate}">
 													</div>
 
-												</div><!-- /.box-body -->
+												</div>
+												<!-- /.box-body -->
 
 
 												<div class="box">
@@ -114,20 +123,16 @@
 																class="table table-striped display" style="width: 100%">
 																<thead>
 																	<tr>
-																		<th scope="col" class="text-center">Indent
-																			Number</th>
-																		<th scope="col" class="text-center">Indent
-																			Date</th>
-																		<th scope="col" class="text-center">Item
-																			Name</th>
+																		<th scope="col" class="text-center">Indent Number</th>
+																		<th scope="col" class="text-center">Indent Date</th>
+																		<th scope="col" class="text-center">Item Name</th>
 																		<th scope="col" class="text-center">UOM</th>
 																		<th scope="col" class="text-center">City</th>
-																		<th scope="col" class="text-center">Required
-																			Date</th>
+																		<th scope="col" class="text-center">Required Date</th>
 																		<th scope="col" class="text-center">Item
 																			Specification</th>
-																		<th scope="col" class="text-center">Term
-																			and Conditions</th>
+																		<th scope="col" class="text-center">Term and
+																			Conditions</th>
 																		<th scope="col" class="text-center">Remarks</th>
 
 
@@ -140,28 +145,22 @@
 
 
 																		<td><select
-																				class="select form-control form-control-sm"
-																				id="indentNumber" title="Location"
-																				required onchange="getIndentList()"
-																				th:field="*{listRFQuotation[__${stat.index}__].openIndent}">
-																				<option value=" ">Select Indent Number
-																				</option>
-																				<option
-																					th:each="indent :  ${aprovedOpenIndentList}"
+																			class="select form-control form-control-sm"
+																			id="indentNumber" title="Location" required
+																			onchange="getIndentList()"
+																			th:field="*{listRFQuotation[__${stat.index}__].openIndent}">
+																				<option value=" ">Select Indent Number</option>
+																				<option th:each="indent :  ${aprovedOpenIndentList}"
 																					th:text="${indent.indentNumber}"
-																					th:value=" ${indent.indentNumber}">
-																				</option>
+																					th:value=" ${indent.indentNumber}"></option>
 
-																			</select></td>
+																		</select></td>
 
-																		<td><input type="date"
-																				style="font-size: 0.95rem"
-																				title="indent date"
-																				class="form-control form-control-sm"
-																				id="indentDate"
-																				th:field="*{listRFQuotation[__${stat.index}__].rfqDate}"
-																				required>
-																		</td>
+																		<td><input type="date" style="font-size: 0.95rem"
+																			title="indent date"
+																			class="form-control form-control-sm" id="indentDate"
+																			th:field="*{listRFQuotation[__${stat.index}__].rfqDate}"
+																			required></td>
 
 
 
@@ -174,49 +173,41 @@
 											</select></td>
 -->
 
-																		<td><input type="text"
-																				style="font-size: 0.95rem"
-																				title="indent date"
-																				class="form-control form-control-sm"
-																				id="indentDate"
-																				th:field="*{listRFQuotation[__${stat.index}__].item}"
-																				required>
-																		</td>
+																		<td><input type="text" style="font-size: 0.95rem"
+																			title="indent date"
+																			class="form-control form-control-sm" id="indentDate"
+																			th:field="*{listRFQuotation[__${stat.index}__].item}"
+																			required></td>
 
 																		<td><input type="text" title="uom"
-																				class="form-control form-control-sm"
-																				id="uom"
-																				th:field="*{listRFQuotation[__${stat.index}__].uom}">
+																			class="form-control form-control-sm" id="uom"
+																			th:field="*{listRFQuotation[__${stat.index}__].uom}">
 																		</td>
 
 																		<td><input type="text" title="city"
-																				class="form-control form-control-sm"
-																				th:field="*{listRFQuotation[__${stat.index}__].city}">
+																			class="form-control form-control-sm"
+																			th:field="*{listRFQuotation[__${stat.index}__].city}">
 																		</td>
 
-																		<td><input type="date"
-																				style="font-size: 0.95rem"
-																				class="form-control form-control-sm"
-																				th:field="*{listRFQuotation[__${stat.index}__].rfqDate}"
-																				required></td>
-
-																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				th:field="*{listRFQuotation[__${stat.index}__].itemSpec}"
-																				required title="">
-																		</td>
+																		<td><input type="date" style="font-size: 0.95rem"
+																			class="form-control form-control-sm"
+																			th:field="*{listRFQuotation[__${stat.index}__].rfqDate}"
+																			required></td>
 
 																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				th:field="*{listRFQuotation[__${stat.index}__].termCondition}"
-																				required title="">
-																		</td>
+																			class="form-control form-control-sm"
+																			th:field="*{listRFQuotation[__${stat.index}__].itemSpec}"
+																			required title=""></td>
 
 																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				th:field="*{listRFQuotation[__${stat.index}__].remarks}"
-																				required title="">
-																		</td>
+																			class="form-control form-control-sm"
+																			th:field="*{listRFQuotation[__${stat.index}__].termCondition}"
+																			required title=""></td>
+
+																		<td><input type="text"
+																			class="form-control form-control-sm"
+																			th:field="*{listRFQuotation[__${stat.index}__].remarks}"
+																			required title=""></td>
 
 
 
@@ -243,12 +234,10 @@
 																class="table table-striped display" style="width: 100%">
 																<thead>
 																	<tr>
-																		<th scope="col" class="text-center">Supplier
-																			Name</th>
+																		<th scope="col" class="text-center">Supplier Name</th>
 																		<th scope="col" class="text-center">Supplier
 																			Address</th>
-																		<th scope="col" class="text-center">Supplier
-																			City</th>
+																		<th scope="col" class="text-center">Supplier City</th>
 																		<th scope="col" class="text-center">Supplier
 																			State</th>
 																		<th scope="col" class="text-center">Contact
@@ -256,8 +245,7 @@
 																		<th scope="col" class="text-center">Email</th>
 																		<th scope="col" class="text-center">Phone Number
 																		</th>
-																		<th scope="col" class="text-center">fax Number
-																		</th>
+																		<th scope="col" class="text-center">fax Number</th>
 
 
 
@@ -267,68 +255,75 @@
 																	<tr id="addr0"
 																		th:each="row, stat :${rFQuotation.listRFQuotationSupply}">
 
-																		<td><select id="supplierId"
-																				class="form-control form-control-sm select"
-																				required title="supplier code"
-																				onchange="supplierInfo()"
-																				name="listRFQuotationSupply[0].suppCode.supplierId">
+																		<td><select id="supplierId0"
+																			class="form-control form-control-sm select" required
+																			title="supplier code" onchange="supplierInfo()"
+																			th:field="*{listRFQuotationSupply[__${stat.index}__].suppCode}">
 																				<option value=" ">Select</option>
-																				<option
-																					th:each="supplier :  ${listSupplier}"
-																					th:text="${supplier.supplierName}"
-																					th:value=" ${supplier.supplierId}">
-																				</option>
+																				<option th:each="supplier :  ${listSupplier}"
+																					th:text="${supplier.partyName}"
+																					th:value=" ${supplier.partyCode}"></option>
 
 
-																			</select></td>
-
+																		</select></td>
 
 
 																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				id="supplierAdd"
-																				title="supplier address"
-																				th:field="*{listRFQuotationSupply[__${stat.index}__].suppAdd}">
+																			class="form-control form-control-sm" id="supplierAdd"
+																			title="supplier address"
+																			th:field="*{listRFQuotationSupply[__${stat.index}__].suppAdd}">
+																		</td>
+
+
+
+																		<td><select
+																			class="form-control form-control-sm select" required
+																			title="supplier city" id="supplierCity0"
+																			th:field="*{listRFQuotationSupply[__${stat.index}__].suppCity}">
+																				<option value=" ">Select</option>
+																				<option th:each="city :  ${listCity}"
+																					th:text="${city.cityName}"
+																					th:value=" ${city.cityCode}"></option>
+
+
+																		</select></td>
+
+
+																		<td><select
+																			class="form-control form-control-sm select" required
+																			id="supplierState0" title="supplier State"
+																			th:field="*{listRFQuotationSupply[__${stat.index}__].suppState}">
+																				<option value=" ">Select</option>
+																				<option th:each="state :  ${listStates}"
+																					th:text="${state.stateName}"
+																					th:value=" ${state.stateCode}"></option>
+
+
+																		</select></td>
+
+																		<td><input type="text"
+																			class="form-control form-control-sm"
+																			id="contactPerson" title="contact person"
+																			th:field="*{listRFQuotationSupply[__${stat.index}__].contactPerson}">
 																		</td>
 
 																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				id="supplierCity" title="supplier city"
-																				th:field="*{listRFQuotationSupply[__${stat.index}__].suppCity}">
+																			class="form-control form-control-sm" id="email"
+																			th:field="*{listRFQuotationSupply[__${stat.index}__].email}">
 																		</td>
 
 																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				id="supplierState"
-																				title="supplier State"
-																				th:field="*{listRFQuotationSupply[__${stat.index}__].suppState}">
+																			class="form-control form-control-sm"
+																			id="accademicQualificatio"
+																			title="Accademic qualification"
+																			th:field="*{listRFQuotationSupply[__${stat.index}__].phoneNumber}">
 																		</td>
 
 																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				id="contactPerson"
-																				title="contact person"
-																				th:field="*{listRFQuotationSupply[__${stat.index}__].contactPerson}">
-																		</td>
-
-																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				id="email"
-																				th:field="*{listRFQuotationSupply[__${stat.index}__].email}">
-																		</td>
-
-																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				id="accademicQualificatio"
-																				title="Accademic qualification"
-																				th:field="*{listRFQuotationSupply[__${stat.index}__].phoneNumber}">
-																		</td>
-
-																		<td><input type="text"
-																				class="form-control form-control-sm"
-																				id="technicalQualification"
-																				title="Technical Qualification"
-																				th:field="*{listRFQuotationSupply[__${stat.index}__].faxNum}">
+																			class="form-control form-control-sm"
+																			id="technicalQualification"
+																			title="Technical Qualification"
+																			th:field="*{listRFQuotationSupply[__${stat.index}__].faxNum}">
 																		</td>
 
 
@@ -349,15 +344,18 @@
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
+													<input type="button" value="Go back!"
+														class="btn btn-danger" onclick="history.back()">
 												</div>
 
 
 											</form>
 
 
-										</div><!-- /.box -->
-										<div style="width: parent; text-align-last: right; margin:8px">
+										</div>
+										<!-- /.box -->
+										<div
+											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/requestquotation/list}">View All R.F.Q</a>
 										</div>
 									</div>
@@ -377,9 +375,12 @@
 			<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/jQuery-2.1.4.min.js"
+				th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js"
+				th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js"
+				th:src="@{/js/fastclick.min.js}"></script>
 			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
 			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
